# libnada_sfml

./: CMakeLists.txt  README.md
include/nada/: gif.hpp  graphic.hpp  multigraphic.hpp  particle.hpp
src/: gif.cpp  grafik.cpp  graphic.cpp  multigraphic.cpp  particle.cpp
test/: test_grafik.hpp  test_particle.hpp  tests.cpp
